# brainfuck

./: CMakeLists.txt  README.md  cmake_uninstall.cmake.in  install.sh
include/: ver.hpp.in
include/BrainFuck/: Interpreter.h
src/: Interpreter.cpp  main.cpp
